fix(no-rule): prevent text overflow in label element

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@
   display: inline-block;
   flex-grow: 1;
   width: 56%;
+  overflow-wrap: break-word;
 }
 
 .task > * {
